Fix .l-stack-basic layout bug

--- a/stories/scss/base/layout.css
+++ b/stories/scss/base/layout.css
@@ -87,7 +87,7 @@ within specific components.
   margin-block: 0;
 }
 
-.l-stack-basic + * {
+.l-stack-basic > * + * {
   margin-block-start: var(--l-stack-gap, var(--t-paragraph));
 }
 
